finished owners edit page

--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -7,9 +7,15 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Walker</h4>
+    <h4>Walker Profile</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ImageUrl)
+        </dt>
+        <dd class="col-sm-10">
+            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
@@ -28,12 +34,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Neighborhood.Name )
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
-        </dd>
+       
     </dl>
 </div>
 <div>
