made changes to walker view profile

--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DogGo.Models.Walker
+﻿@model DogGo.Models.ViewModels.ProfileViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,33 +11,57 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @Html.DisplayNameFor(model => model.Walker.ImageUrl)
         </dt>
         <dd class="col-sm-10">
-            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
+            <img class="bg-info" src="@Model.Walker.ImageUrl" alt="avatar" />
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.Walker.Id)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Walker.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Walker.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Walker.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Neighborhood)
+            @Html.DisplayNameFor(model => model.Walker.Neighborhood)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Neighborhood.Name )
-        </dd>
-       
+            @Html.DisplayFor(model => model.Walker.Neighborhood.Name )
+        </dd>     
     </dl>
 </div>
+
+    <section class="col-lg-4 col-md-8 container mt-5">
+      <h4>Recent Walks</h4>
+
+          <ul class="list-group mt-4">
+        @foreach (Walk walk in Model.Walks)
+        {
+                <li class="list-group-item disabled" aria-disabled="true">
+                  <span class="font-weight-bold ml-4">@walk.Date</span>
+                </li>
+                     <li class="list-group-item disabled" aria-disabled="true">
+                      <span class="font-weight-bold ml-4">@walk.DogId</span>
+                  </li>
+                  <li class="list-group-item disabled" aria-disabled="true">
+                      <span class="font-weight-bold ml-4">@walk.Duration</span>
+                  </li>
+        }
+      </ul>
+    </section>
+
+<section class="col-lg-4 col-md-8 container mt-5">
+    <h4>TOTAL WALK TIME: @Model.WalkTime</h4>
+
+    
+</section>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
