added owner name to walker profile view

--- a/Views/Walkers/Details.cshtml
+++ b/Views/Walkers/Details.cshtml
@@ -47,7 +47,7 @@
                   <span class="font-weight-bold ml-4">@walk.Date</span>
                 </li>
                      <li class="list-group-item disabled" aria-disabled="true">
-                      <span class="font-weight-bold ml-4">@walk.DogId</span>
+                      <span class="font-weight-bold ml-4">@walk.Owner.Name</span>
                   </li>
                   <li class="list-group-item disabled" aria-disabled="true">
                       <span class="font-weight-bold ml-4">@walk.Duration</span>
